--- a/react-for-beginners/src/components/Movie.module.css
+++ b/react-for-beginners/src/components/Movie.module.css
@@ -8,14 +8,15 @@
   font-weight: 300;
   padding-top: 45px;
   font-size: 18px;
+  margin: 0 auto;
 }
 
 .title {
   color: aliceblue;
   text-decoration: none;
   font-weight: 400;
-  font-size: 35px;
-  margin-left: 30px;
+  font-size: 30px;
+  padding-left: 30px;
   font-style: italic;
 }
 
