--- a/react-for-beginners/src/components/Movie.module.css
+++ b/react-for-beginners/src/components/Movie.module.css
@@ -1,5 +1,6 @@
 .movie {
   width: 450px;
+  height: 700px;
   background-color: rgb(0, 42, 97);
   border-radius: 25px;
   box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
@@ -22,6 +23,7 @@
 
 .summary {
   margin: 30px;
+  height: 110px;
 }
 
 .imgBox {
@@ -40,6 +42,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
   padding: 0;
   color: rgb(173, 169, 169);
 }
